Fix inline code wrapping.

--- a/assets/styles/_markdown.scss
+++ b/assets/styles/_markdown.scss
@@ -55,6 +55,8 @@
 		margin-left:     -0.25em;
 		margin-right:    -0.25em;
 		padding:          0.1em 0.25em;
+		user-select:      all;
+		white-space:      pre-wrap;
 	}
 
 	// “Fenced” blocks.
